Changed layout to fluid and modified some css.

--- a/app/styles/cssSolarSystem.scss
+++ b/app/styles/cssSolarSystem.scss
@@ -1,7 +1,9 @@
 #solarSystem{
     background-color:black;
     position:relative;
-    width: 1300px;
+    
+    width: 100%;
+    min-width: 1300px;
     height:1300px;
 }
 
