--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,12 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<section id='main'>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+  <h3 class='pageTitle'>Home</h3>
+  <div class='additionalLinks'>
+    <h4 class='sectionHeader'>Additional Links</h4>
+    <ul class='additionalLinks'>
+        <li><a href='http://andyjmeyers.blogspot.com/'>Blog</a></li>
+        <li><a href='http://jsfiddle.net/user/andyjmeyers/fiddles/'>JS Fiddles</a></li>
+        <li><a href='http://stackoverflow.com/users/1946319/andy-meyers'>Stack Overflow</a></li>
+    </ul>
+  </div>
+</section>
