Added new font and top nav

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,9 @@
-<p>This is the about view.</p>
+
+
+<div>
+    <a href='http://www.fontspace.com/nimavisual/moonhouse'>Font moonhouse by NimaVisual</a>
+</div>
+<div>
+    <a href='http://soundbible.com/2067-Blop.html'> Pop Audio Sound by Mark DiAngelo</a>
+
+</div>
