--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,7 +19,9 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -47,4 +49,59 @@ table {
 
 
 // default template
+$headerHeight:50px;
 
+html{
+  font-family:'general';
+  font-size:16px;
+}
+
+nav.header{
+  background-color:black;
+  color:white;
+  position:relative;
+  display:100%;
+  height:$headerHeight;
+
+  .appTitle{
+    
+    font-size:1.2em;
+    position:absolute;
+    left:10px;
+    height:100%;
+    line-height: $headerHeight;
+  }
+
+  .nav{
+    position:absolute;
+    width:100%;
+    text-align: center;
+    li{
+      line-height: $headerHeight;
+      display: inline-block;
+      padding-left:5px;
+      padding-right:5px;
+      a{
+        text-decoration: none;
+        color:inherit;
+        height: 100%;
+        display: inline-block;
+      }
+    }
+    li:hover{
+      background-color: rgba(255,255,255,.2);
+    }
+    li.active{
+      background-color: rgba(255,255,255,.2);
+      border-right: 1px solid rgba(255,255,255,.5);
+      border-left: 1px solid rgba(255,255,255,.5);
+    }
+  }
+}
+
+
+
+@font-face {
+    font-family: 'general';
+    src: url(../fonts/moonhouse.ttf);
+}
