First attempt at 6 degrees of westeros

--- a/app/views/relationshipMapGOT.html
+++ b/app/views/relationshipMapGOT.html
@@ -1,2 +1,7 @@
+<div class='loadingContainer' ng-show='isLoading'>
+    <div class='loading'>
+        {{message}}
+    </div>
+</div>
 <div class='svgContainer' >
 </div>
