--- a/app/styles/relationshipMapGOT.scss
+++ b/app/styles/relationshipMapGOT.scss
@@ -1,10 +1,8 @@
-.node {
-    fill: #ccc;
-    stroke: #fff;
-    stroke-width: 2px;
+.link {
+  stroke: #ccc;
 }
 
-.link {
-    stroke: #777;
-    stroke-width: 2px;
+.node text {
+  pointer-events: none;
+  font: 10px sans-serif;
 }
