Added stuff to editor

--- a/app/views/relationshipEditorGOT.html
+++ b/app/views/relationshipEditorGOT.html
@@ -75,6 +75,8 @@
 
 <div class='actions'>
     <button ng-click='exportJSON();'>Export JSON</button>
+    <button ng-click='deleteUnusedLinks();'>Delete Unused links</button>
+
 </div>
 
 <!-- <div class='characters'>
