Modified the background and main pages.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,9 +1,18 @@
+<section id='about'>
+    <h3>About</h3>
 
 
-<div>
-    <a href='http://www.fontspace.com/nimavisual/moonhouse'>Font moonhouse by NimaVisual</a>
-</div>
-<div>
-    <a href='http://soundbible.com/2067-Blop.html'> Pop Audio Sound by Mark DiAngelo</a>
+    <ul class='list'>
+        <h4>Credits</h4>
+        <li>
+            <a href='http://www.fontspace.com/nimavisual/moonhouse'>Font moonhouse by NimaVisual</a>
+        </li>
+        <li>
+            <a href='http://soundbible.com/2067-Blop.html'> Bubble Pop Audio Sound by Mark DiAngelo</a>
 
-</div>
+        </li>
+
+        <li>
+        </li>
+    </ul>
+</section>
