--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  
 }
 ol, ul {
   list-style: none;
@@ -54,19 +55,32 @@ $headerHeight:50px;
 html{
   font-family:'general';
   font-size:16px;
+  height:100%;
+  background-image:url(../images/m31_bers_1824.jpg);
+  background-color:black;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed; /* Or scroll */
+}
+
+body, html, .container{
+  min-height: 100%;
 }
 
 nav.header{
-  background-color:black;
+  // background-color:black;
   color:white;
   position:relative;
   display:100%;
   height:$headerHeight;
+  border-bottom: 1px solid rgba(244,244,244,.2);
 
   .appTitle{
     
     font-size:1.2em;
-    position:absolute;
+    position:absolute;  
     left:10px;
     height:100%;
     line-height: $headerHeight;
@@ -98,6 +112,7 @@ nav.header{
     }
   }
 }
+
 
 
 
