--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,8 @@
 <section id='main'>
 
-  <h3 class='pageTitle'>Home</h3>
+<h3>Andyland</h3>
+<p>Some web experiments by that guy you know.</p>
+<!--   <h3 class='pageTitle'>Home</h3>
   <div class='additionalLinks'>
     <h4 class='sectionHeader'>Additional Links</h4>
     <ul class='additionalLinks'>
@@ -8,5 +10,5 @@
         <li><a href='http://jsfiddle.net/user/andyjmeyers/fiddles/'>JS Fiddles</a></li>
         <li><a href='http://stackoverflow.com/users/1946319/andy-meyers'>Stack Overflow</a></li>
     </ul>
-  </div>
+  </div> -->
 </section>
