Adding rotating planets

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,18 +1,35 @@
 <section id='about'>
+    <div class='main'>
     <h3>About</h3>
+    <p>
+        Husband, Father, Engineer, Astronomer, Brewer, Teacher, Student, Stoic, Gamer, I'm just that guy you know.  
+    </p>
+    <p>
+        Learn more about me at these places:
+        <ul class='additionalLinks'>
+            <li><a href='http://andyjmeyers.blogspot.com/'>Blog</a></li>
+            <li><a>Twitter</a></li>
+            <li><a href='http://jsfiddle.net/user/andyjmeyers/fiddles/'>JS Fiddles</a></li>
+            <li><a href='http://stackoverflow.com/users/1946319/andy-meyers'>Stack Overflow</a></li>
+            <li><a>Linked-In</a></li>
+        </ul>
+    </p>
 
+    </div>
+    <div class='main'>
+        <ul class='list'>
+            <h4>Credits</h4>
+            <li>
+                <a href='http://www.fontspace.com/nimavisual/moonhouse'>Font moonhouse by NimaVisual</a>
+            </li>
+            <li>
+                <a href='http://soundbible.com/2067-Blop.html'> Bubble Pop Audio Sound by Mark DiAngelo</a>
 
-    <ul class='list'>
-        <h4>Credits</h4>
-        <li>
-            <a href='http://www.fontspace.com/nimavisual/moonhouse'>Font moonhouse by NimaVisual</a>
-        </li>
-        <li>
-            <a href='http://soundbible.com/2067-Blop.html'> Bubble Pop Audio Sound by Mark DiAngelo</a>
-
-        </li>
-
-        <li>
-        </li>
-    </ul>
+            </li>
+                <a href='http://bersonicastronomy.com/welcome/about/'>Background Image Credit &amp; Copyright: Jacob Bers</a> 
+                <a href='http://bersonicastronomy.com/'>(Bersonic)</a>
+            <li>
+            </li>
+        </ul>
+    </div>
 </section>
