--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <section id='main'>
 
-<h3>Andyland</h3>
+<h1 class='main-header'>Andyland</h1>
 <p>Some web experiments by that guy you know.</p>
 <!--   <h3 class='pageTitle'>Home</h3>
   <div class='additionalLinks'>
