Added transparent image page.

--- a/app/views/threejsPlanet.html
+++ b/app/views/threejsPlanet.html
@@ -14,6 +14,32 @@
                 <select ng-options='object.name for object in objects' ng-model='selectedObject'></select>
             </span>
         </div>
+        <div class='row'>
+            <div><span>Light</span></div>
+            <div class='row'>
+                <span class='six-column'>
+                    <label>X:</label>
+                </span>
+                <span class='six-column'>
+                    <input type='number' ng-model='lightSettings.x'></input>
+                </span class='six-column'>
+                <span>
+                    <label>Y:</label>
+                </span>
+                <span class='six-column'>
+                    <input type='number' ng-model='lightSettings.y'></input>
+                </span class='six-column'>
+                <span class='six-column'>
+                    <label>Z:</label>
+                </span>
+                <span class='six-column'>
+                    <input type='number' ng-model='lightSettings.z'></input>
+                </span>
+            </div>
+            <div class='row'>
+                
+            </div>
+        </div>
     </div>
     <canvas id='planetCanvas'></canvas>
 </div>
