--- a/app/styles/about.scss
+++ b/app/styles/about.scss
@@ -3,4 +3,16 @@
   margin-left: auto;
   margin-right: auto;
 
+  color: white;
+
+  .main{
+    margin-top: 20px;
+
+  }
+
+  background-color:rgba(3,3,3,.3);
+  padding:20px;
+  border-radius: 10px;
+
 }
+
