--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,7 @@ nav.header{
   display:100%;
   height:$headerHeight;
   border-bottom: 1px solid rgba(244,244,244,.2);
+  font-variant: small-caps;
 
   .appTitle{
     
@@ -111,6 +112,9 @@ nav.header{
       border-left: 1px solid rgba(255,255,255,.5);
     }
   }
+}
+h1,h2,h3,h4{
+  font-variant: small-caps; 
 }
 
 
