--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -53,7 +53,7 @@ table {
 $headerHeight:50px;
 
 html{
-  font-family:'general';
+  font-family:'Orbitron';
   font-size:16px;
   height:100%;
   background-image:url(../images/m31_bers_1824.jpg);
